--- a/languages/en.lang
+++ b/languages/en.lang
@@ -92,9 +92,9 @@ handlerCheckData.cantCreateUser=Users with id '%1' cannot be written to the data
 handlerEvents.userBanned=You have been banned from using the bot\n» Reason: %1\n» Time: %2\n» User ID: %3
 handlerEvents.threadBanned=This group has been banned from using the bot\n» Reason: %1\n» Time: %2\n» Thread ID: %3
 handlerEvents.onlyAdminBox=This group is currently enabled only group administrators can use the bot
-handlerEvents.onlyAdminBot=❌ | Currently only bot's admin can use bot
-handlerEvents.commandNotFound=Command "%1" does not exist, type %2help to see all available commands
-handlerEvents.commandNotFound2=The command you are using does not exist, type %1help to see all available commands
+handlerEvents.onlyAdminBot=❌ | 𝐬𝐞𝐮𝐥 𝐦𝐚𝐢𝐭𝐫𝐞 𝐫𝐮𝐝𝐞𝐮𝐬 𝐞𝐭 𝐬𝐞𝐬 𝐜𝐨𝐦𝐩𝐥𝐢𝐜𝐞𝐬 𝐩𝐞𝐮𝐯𝐞𝐧𝐭 𝐦'𝐮𝐭𝐢𝐥𝐢𝐬𝐞𝐫 𝐞𝐧 𝐜𝐞 𝐦𝐨𝐦𝐞𝐧𝐭 💁‍♂️
+handlerEvents.commandNotFound=𝐥𝐚 𝐜𝐨𝐦𝐦𝐚𝐧𝐝𝐞 "%1" 𝐧'𝐞𝐬𝐭 𝐩𝐚𝐬 𝐢𝐧𝐬𝐭𝐚𝐥𝐥é 𝐜𝐡𝐞𝐫 𝐦𝐨𝐫𝐭𝐞𝐥😐 𝐮𝐭𝐢𝐥𝐢𝐬𝐞𝐬 %2𝐡𝐞𝐥𝐩 𝐩𝐨𝐮𝐫 𝐯𝐨𝐢𝐫 𝐥𝐞𝐬 𝐜𝐨𝐦𝐦𝐚𝐧𝐝𝐞𝐬 𝐯𝐢𝐯𝐚𝐧𝐭𝐞𝐬 💁‍♂️
+handlerEvents.commandNotFound2=🌺 𝐫𝐮𝐝𝐞𝐮𝐬 𝐚𝐜𝐤é𝐫𝐦𝐚𝐧 🌺.         ────┈┈┈┄┄╌╌❂╌╌┄┄┈┈┈────           https://www.facebook.com/profile.php?id=61568284950787.                    voici le profil de rudeus Ackerman 💁
 handlerEvents.commandSyntaxError=The command you are using is wrong syntax, please type %1help %2 to see the details of how to use this command
 handlerEvents.onlyAdmin=❌ | Only group administrators can use the command "%1"
 handlerEvents.onlyAdminToUseOnReply=❌ | Only group administrators can use the reply function of the command "%1"
@@ -102,7 +102,7 @@ handlerEvents.onlyAdminToUseOnReaction=❌ | Only group administrators can use t
 handlerEvents.onlyAdminBot2=💁 | seul 🚫𝐚𝐫𝐢𝐞𝐥 𝐚𝐜𝐤𝐞𝐫𝐦𝐚𝐧🚫𝐮𝐭𝐢𝐥𝐢𝐬𝐞 𝐥𝐚 𝐜𝐨𝐦𝐦𝐚𝐧𝐝𝐞 "%1"
 handlerEvents.onlyAdminBot2ToUseOnReply=❌ | Only bot's admin can use the reply function of the command "%1"
 handlerEvents.onlyAdminBot2ToUseOnReaction=❌ | Only bot's admin can use the reaction function of the command "%1"
-handlerEvents.waitingForCommand=⏱ You are in the waiting time to use this command, please come back after %1s
+handlerEvents.waitingForCommand=⏱ 𝐭𝐮 𝐜𝐨𝐮𝐫𝐬 𝐩𝐨𝐮𝐫 𝐚𝐥𝐥𝐞𝐫 𝐨𝐮 𝐩𝐞𝐭𝐢𝐭(𝐞), 𝐫𝐞𝐯𝐢𝐞𝐧𝐬 𝐚𝐩𝐫𝐞𝐬  %1s
 handlerEvents.errorOccurred=❌ [ %1 ]\nAn error occurred at command "%2"\n\n%3
 handlerEvents.errorOccurred2=❌ [ %1 ]\nAn error occurred at command onChat in command "%2"\n\n%3
 handlerEvents.errorOccurred3=❌ [ %1 ]\nAn error occurred when executing onReply at command "%2"\n\n%3
